<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PrintFinalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        >


        <TextView
            android:id="@+id/userIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="50dp"
            android:text="@string/userIDTextview"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <android.inputmethodservice.ExtractEditText
                android:id="@+id/userIDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:hint="@string/userIDEditText"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"

                />
            <Button
                android:id="@+id/checkBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_btn"
                android:padding="10dp"
                android:text="@string/checkbtn"
                android:textAllCaps="false"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:elevation="10dp" />


        </LinearLayout>




        <TextView
            android:id="@+id/passwordTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/JobTextview"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/jobSpinner"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:entries="@array/jobSpinner_array"

            />
        <TextView
            android:id="@+id/stationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/stationTextview"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <android.inputmethodservice.ExtractEditText
                android:id="@+id/stationEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:hint="@string/stationNoEditText"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"

                />
            <Button
                android:id="@+id/checkStationBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_btn"
                android:padding="10dp"
                android:text="@string/checkbtn"
                android:textAllCaps="false"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:elevation="10dp" />


        </LinearLayout>




        <android.inputmethodservice.ExtractEditText
            android:id="@+id/deviceIDEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"
            android:hint="@string/stationNameEditText"


            />


        <TextView
            android:id="@+id/deviceIDTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/deviceIDTextview"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/deviceIDEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/deviceIdEditText"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"

            />

        <TextView
            android:id="@+id/cashFundsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cashFundsTextView"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/cashFundsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/cashFundsEditText"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"

            />
        <TextView
            android:id="@+id/notesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/notesEditText"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/notesEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"
            android:background="@drawable/round_edit"
            android:padding="10dp"


            />


        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            android:layout_marginTop="30dp"
            android:background="@drawable/round_btn"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/printbtn"
            android:textAllCaps="true"
            android:textColor="@color/textcolor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:elevation="10dp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>