<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="70dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="70dp">

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/userNameTextview"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/userNameEditText"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"

            />

        <TextView
            android:id="@+id/passwordTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/passwordTextview"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/passwordEditText"
            android:inputType="text"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"


            />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/round_btn"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:text="@string/loginBtn"
            android:textAllCaps="true"
            android:textColor="@color/textcolor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:elevation="10dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>