<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SyncActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deviceId"
            android:text="@string/deviceIDTextview"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            />
        <android.inputmethodservice.ExtractEditText
            android:id="@+id/deviceIdEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/deviceIdEditText"
            android:inputType="text"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/severId"
            android:text="@string/serverIpTextview"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />
        <android.inputmethodservice.ExtractEditText
            android:id="@+id/severIdEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/serverIpEditText"
            android:textAllCaps="true"
            android:inputType="number"



            />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_marginTop="50dp"
            android:scaleType="center"
            android:src="@drawable/ic_cached_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="10dp"
            app:fabSize="normal"
            app:maxImageSize="60dp"
            app:useCompatPadding="true"
            app:fabCustomSize="100dp"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastupdate"
            android:text="@string/LastUpdateTextview"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>