<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="80dp">


            <Button
                android:id="@+id/syncBtn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/round_btn"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/syncBtn"
                android:textAllCaps="true"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                android:elevation="10dp"



                />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/loginBtn"
            android:background="@drawable/round_btn"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:elevation="10dp"
            />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/exitBtn"
            android:background="@drawable/round_btn"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:elevation="10dp"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EnglishTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:text="@string/EnglishTextview"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ArabicTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:text="@string/ArabicTextview"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>